--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,21 @@
 
 
 body {
-    scrollbar-width: none;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  scrollbar-width: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
 }
 
 /* Hide scrollbar but keep scrolling */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
 .no-scrollbar {
-  -ms-overflow-style: none;  /* IE/Edge */
-  scrollbar-width: none;     /* Firefox */
+  -ms-overflow-style: none;
+  /* IE/Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
